applying langauges done

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -8,18 +8,21 @@
   "username": "اسم المستخدم",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
-  "Already have an account?": "هل لديك حساب بالفعل؟",
-  "Don't have an account?": "ليس لديك حساب؟",
+  "alreadyHaveAnAccount": "هل لديك حساب بالفعل؟",
+  "dontHaveAnAccount": "ليس لديك حساب؟",
   "forgotPassword": "نسيت كلمة المرور؟",
   "loginFailed": "فشل تسجيل الدخول",
   "signupFailed": "فشل التسجيل",
   "error": "خطأ",
+  "home": "الصفحة الرئيسية",
+  "saved": "محفوظ",
   "seeAll": "عرض الكل",
   "availableTrips": "الرحلات المتاحة",
   "agencies": "أفضل الوكالات",
   "noSavedTrips": "لا توجد رحلات محفوظة",
   "savedTrips": "الرحلات المحفوظة",
   "profile": "الملف الشخصي",
+  "phoneNumber": "رقم الهاتف",
   "bookings": "الحجوزات",
   "settings": "الإعدادات",
   "notifications": "الإشعارات",
@@ -28,7 +31,8 @@
   "editProfile": "تعديل الملف الشخصي",
   "description": "الوصف",
   "showMore": "عرض المزيد",
-  "About": "حول",
+  "showLess": "عرض أقل",
+  "about": "حول",
   "bookNow": "احجز الآن",
   "algerianCurrency": "د.ج"
 }
