--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,8 +8,10 @@
   "username": "Username",
   "email": "Email",
   "password": "Password",
-  "Already have an account?": "Already have an account?",
-  "Don't have an account?": "Don't have an account?",
+  "home": "Home",
+  "saved": "Saved",
+  "alreadyHaveAnAccount": "Already have an account?",
+  "dontHaveAnAccount": "Don't have an account?",
   "forgotPassword": "Forgot password?",
   "loginFailed": "Login failed",
   "signupFailed": "Signup failed",
@@ -26,9 +28,11 @@
   "logout": "Logout",
   "save": "Save",
   "editProfile": "Edit Profile",
+  "phoneNumber": "Phone Number",
   "description": "Description",
   "showMore": "Show More",
-  "About": "About",
+  "showLess": "Show Less",
+  "about": "About",
   "bookNow": "Book Now",
   "algerianCurrency": "DZD"
 }
