--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -8,15 +8,17 @@
   "username": "Nom d'utilisateur",
   "email": "Email",
   "password": "Mot de passe",
-  "Already have an account?": "Vous avez déjà un compte?",
-  "Don't have an account?": "Vous n'avez pas de compte?",
+  "home": "Accueil",
+  "saved": "Enregistré",
+  "alreadyHaveAnAccount": "Vous avez déjà un compte?",
+  "dontHaveAnAccount": "Vous n'avez pas de compte?",
   "forgotPassword": "Mot de passe oublié?",
   "loginFailed": "Échec de la connexion",
   "signupFailed": "Échec de l'inscription",
   "error": "Erreur",
   "seeAll": "Voir tout",
   "availableTrips": "Voyages disponibles",
-  "agencies": "Agences principales",
+  "agencies": "Meilleures Agences",
   "noSavedTrips": "Aucun voyage enregistré",
   "savedTrips": "Voyages enregistrés",
   "profile": "Profil",
@@ -26,8 +28,11 @@
   "logout": "Déconnexion",
   "save": "Enregistrer",
   "editProfile": "Modifier le profil",
+  "phoneNumber": "Numéro de téléphone",
   "description": "Description",
   "showMore": "Voir plus",
-  "About": "À propos",
-  "bookNow": "Réservez maintenant"
+  "showLess": "Voir moins",
+  "about": "À propos",
+  "bookNow": "Réservez maintenant",
+  "algerianCurrency": "DA"
 }
